
=item *

Contributors can be deleted again. Thanks to Phillip for the report (Bug
#111). [David]

=item *

Fixed odd positioning of the "Check-in" menu on /workflow/profile/workspace 
(Bug #89). [Phillip Smith]

=item *

Fixed the contributor association popup so that hitting the "Enter" key to
perform a search no longer deletes contributors you've just added (Bug #112).
[David]

=back

=head1 Version 1.11.1 (2008-10-03)

=head2 Improvements

=over

=item *

Added reverse date sorting option on desks (newest items first). Suggested by
Bret Dawson. [Greg Heo]

=item *

Updated the Xinha include script to reflect latest Xinha updates. [Matt Rolf]

=item *

Updated the SFTP mover to use the faster Net::SSH2, rather than the deprecated
Net::SFTP. [Sarah Mercier, Matt Rolf, Charlie Reitsma, Michael Herring]

=item *

The C<to_preview> option to C<< Bric::SOAP::Workflow->publish >> now previews
a document for all output channels, not just the primary output channel. The
same of course applies to the C<--to-preview> option to F<bric_soap>.
Suggested by Terence Bodola. [David]

=item *

Server errors sent in response to Ajax requests are now displayed in a modal
lightbox widget, rather than just getting shoved into the DOM. Also, effects
that should only occur on success (such as removing a story from a desk when
you move it) now only happen on success. [David]

=item *

Changed the behavior of C<< Bric::Util::Burner->publish_another >> so that,
rather than immediately publishing a document, it instead adds it to a list of
documents to be published and then returns. Documents added to the list are
then published when all other publish jobs in a given request have finished
publishing. The upshot is that if you bulk publish 50 stories that all trigger
the republication of a home page story, that home page story will be
republished only once, rather than 50 times. A side-effect is memory
consumption, so don't send too many stories to C<publish_another> from your