@@ -611,6 +611,13 @@ Fixed the contributor association popup so that hitting the "Enter" key to
 perform a search no longer deletes contributors you've just added (Bug #112).
 [David]
 
+=item *
+
+Story, Media, and Template search now properly remember whether they're in
+advanced or simple mode when a an empty search is submitted and when the
+"Clear Values" button is clicked. Thanks to Matt Rol for the report (Bug #
+74). [David]
+
 =back
 
 =head1 Version 1.11.1 (2008-10-03)
